--- a/DES.cabal
+++ b/DES.cabal
@@ -27,7 +27,7 @@ common warnings
 executable DES
   import:           warnings
   main-is:          Main.hs
-  other-modules:    Des, MyBits
+  other-modules:    Des.Internal, Des.Bits, Des
   build-depends:    base >=4 && <5, hspec, array
   hs-source-dirs:   src
   default-language: Haskell2010
